--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -9,11 +9,11 @@
   tasks:
     # Setup user
     - name: Create user
-      user:
+      user: 
         name: "{{ user }}"
         uid: "{{ uid }}"
         group: "{{ group }}"
-        groups: lxd
+        groups: "lxd,sudo"
         append: yes
         shell: /bin/bash
         password: "$6$9VnD4IIu10$7kBHJd8dvO0pDZgaP08xn/EmL9H.2Lz1jY2zxW304RQnF6GQH722f97IszmaZ2YTJehUscRreP8y8WmsKhqBj1"
@@ -83,6 +83,7 @@
         - juju
         - zfs
         - lxd
+        - lxc-common
 
     - name: Install snap packages
       command: "snap install {{ item }}"
