--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -58,13 +58,15 @@
           export LAYER_PATH=$JUJU_REPOSITORY/layers
           export INTERFACE_PATH=$JUJU_REPOSITORY/interfaces
 
+          # Add snaps to path
+          export PATH=/snap/bin:$PATH
+
 
     # Setup packages
     - name: Add repos
       apt_repository:
         repo: "{{ item }}"
       with_items:
-        - ppa:ubuntu-lxc/lxd-stable
         - ppa:rael-gc/rvm
 
     - name: Install packages
@@ -73,8 +75,6 @@
         state: latest
       with_items:
         - zfs
-        - lxd
-        - lxc-common
         - python-pip
         - python-tox
         - rvm
@@ -82,12 +82,20 @@
         - tree
         - apt-cacher-ng
 
+    - name: Install LXD
+      apt:
+        name: "{{ item }}"
+        state: latest
+        default_release: xenial-backports
+      with_items:
+        - lxd
+        - lxd-client
+
     - name: Install juju snap
       command: snap install juju --classic
 
-    - name: Install snap charm
+    - name: Install charm snap
       command: snap install charm
-
 
     # Setup LXD
     - name: Setup LXD
@@ -97,6 +105,8 @@
         - lxc network create lxdbr0
         - lxc network attach-profile lxdbr0 default eth0
         - lxc network set lxdbr0 ipv6.address none
+      # environment:
+      #   PATH: "/snap/bin:{{ ansible_env.PATH }}"
       ignore_errors: yes
 
 
