--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -8,7 +8,7 @@
     home_files:
       - .bashrc
       - .profile
-    juju_channel: 2.4/stable
+    juju_channel: 2.6/stable
     charm_channel: latest/stable
 
   tasks:
@@ -65,6 +65,7 @@
         name: 
           - lxd
           - zfsutils-linux
+          - bash-completion
           - apt-cacher-ng
           - python3
           - python3-pip
@@ -100,21 +101,15 @@
         line: 'PassThroughPattern: .*'
       notify: restart apt-cacher-ng
 
-    - name: Add apt proxy to juju config
+    - name: Create yaml file for setting apt proxy with `--model-default` flag
       blockinfile:
-        path: "/home/{{ user }}/.local/share/juju/clouds.yaml"
+        path: "/home/{{ user }}/apt-proxy.yaml"
         owner: "{{ user }}"
         group: "{{ group }}"
-        mode: 0600
         create: yes
         content: |
-          clouds:
-            lxd:
-              type: lxd
-              config:
-                apt-http-proxy: http://{{ ansible_default_ipv4.address }}:3142
-                apt-https-proxy: http://{{ ansible_default_ipv4.address }}:3142
-                enable-os-upgrade: false
+          apt-http-proxy: {{ ansible_default_ipv4.address }}:3142
+          apt-https-proxy: {{ ansible_default_ipv4.address }}:3142
 
   handlers:
     - name: restart apt-cacher-ng
