--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -67,6 +67,7 @@
           - zfsutils-linux
           - bash-completion
           - apt-cacher-ng
+          - python-tox
           - python3
           - python3-pip
         state: latest
