Add alias for bootstrapping

--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -57,6 +57,8 @@
         content: |
           # Add alias for easy watching of juju status
           alias watch-juju='watch --color -n1 juju status --color'
+          # Add alias for bootstrapping juju with apt proxy
+          alias bootstrap-juju='juju bootstrap lxd --no-gui --model-default apt-proxy.yaml'
           # Add snaps to path
           export PATH=/snap/bin:$PATH
 
