Disable os-upgrade in model default

--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -90,7 +90,7 @@
           # Add alias for easy watching of juju status
           alias watch-juju='watch --color -n1 juju status --color'
           # Add alias for bootstrapping juju with apt proxy
-          alias bootstrap-juju='juju bootstrap lxd --no-gui --model-default apt-proxy.yaml'
+          alias bootstrap-juju='juju bootstrap lxd --no-gui --model-default config.yaml'
           # Add snaps to path
           export PATH=/snap/bin:$PATH
 
@@ -136,13 +136,14 @@
         line: 'PassThroughPattern: .*'
       notify: restart apt-cacher-ng
 
-    - name: Create yaml file for setting apt proxy with `--model-default` flag
+    - name: Template juju config for apt cache and speeding up dev
       blockinfile:
-        path: "/home/{{ user }}/apt-proxy.yaml"
+        path: "/home/{{ user }}/config.yaml"
         owner: "{{ user }}"
         group: "{{ group }}"
         create: yes
         content: |
+          enable-os-upgrade: false
           apt-http-proxy: {{ ansible_default_ipv4.address }}:3142
           apt-https-proxy: {{ ansible_default_ipv4.address }}:3142
 
