--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -62,7 +62,7 @@
           # Add alias for bootstrapping juju
           alias bootstrap-juju='juju bootstrap lxd --no-gui'
           # Add alias for bootstrapping juju with apt proxy
-          alias bootstrap-juju-proxy='juju bootstrap lxd --no-gui --model-default apt-proxy.yaml'
+          alias bootstrap-juju-proxy='juju bootstrap lxd --no-gui --model-default config.yaml'
           # Add snaps to path
           export PATH=/snap/bin:$PATH
 
@@ -84,17 +84,6 @@
           #!/usr/bin/env bash
           juju ssh $1 -L 0.0.0.0:$2:localhost:$3
 
-
-    - name: Add `watch-juju` alias and snap path to .bashrc
-      blockinfile:
-        path: "/home/{{ user }}/.bashrc"
-        content: |
-          # Add alias for easy watching of juju status
-          alias watch-juju='watch --color -n1 juju status --color'
-          # Add alias for bootstrapping juju with apt proxy
-          alias bootstrap-juju='juju bootstrap lxd --no-gui --model-default config.yaml'
-          # Add snaps to path
-          export PATH=/snap/bin:$PATH
 
     - name: Install apt packages for Ubuntu Xenial 16.04
       apt:
