--- a/vagrant.yaml
+++ b/vagrant.yaml
@@ -84,6 +84,9 @@
           #!/usr/bin/env bash
           juju ssh $1 -L 0.0.0.0:$2:localhost:$3
 
+    - name: Install dive
+      apt:
+        deb: https://github.com/wagoodman/dive/releases/download/v0.9.2/dive_0.9.2_linux_amd64.deb
 
     - name: Install apt packages for Ubuntu Xenial 16.04
       apt:
